--- a/slides/intro-bioconductor.html
+++ b/slides/intro-bioconductor.html
@@ -149,7 +149,7 @@ Note: Bioconductor is updated twice a year, around April and October.
 ---
 # The Bioconductor Environment
 
-There are some kind of data, such as sequences and alignments that need be treated in a different way that we use to do with lists or data frames.
+There are some kind of data, such as sequences and alignments that need to be treated in a different way that we use to do with lists or data frames.
 
 Let's see some packages that will help us to deal with genomics data.
 
@@ -261,7 +261,7 @@ translate(eco$`eco-b0001`)
 ```
 
 ---
-## We can store more information from each sequence, (eg.genomic position and chromosome).
+## We can store more information from each sequence, (eg. genomic position and chromosome).
 
 .center[
 &lt;img src = "images/genesABC.png" style="width:600px; " /&gt;
@@ -291,7 +291,7 @@ GRanges(seqnames = c("geneA", "geneB", "geneC"),
 ```
 
 .center[
-&lt;img src = "images/genesABC.png" style="width:400px; " /&gt;
+&lt;img src = "images/genesABC.png" style="width:450px; " /&gt;
 ]
 
 --
@@ -397,8 +397,9 @@ flank(gr, 100)
 ```
 
 ---
-class: middle center
+class: center
 
+&lt;br&gt;&lt;br&gt;
 # Where can we find genomic data?
 
 --
@@ -412,9 +413,9 @@ class: middle center
 
 **AnnotationHub** connect with multiple genomic data providers and give us access to their data.
 
-We use AnnotationHub() function to connect with the database. 
+First use AnnotationHub() function to connect with the database. 
 
-Now, we are ready to explore available data.
+Then, we are ready to explore available data.
 
 
 ```r
@@ -519,7 +520,7 @@ Pros of using Gviz: plotting flexibility.
 .center[
 &lt;img src = "images/cdsb.png" style="width:400px; " /&gt;
 &lt;img src = "images/regutoolsteam.png" style="width:500px; " /&gt;
-http://comunidadbioinfo.github.io
+
 ]
 
 --
@@ -537,7 +538,7 @@ http://www.bioconductor.org/packages/regutools
 ---
 # How regutools works?
 
-First we need to connect with the database by creating a *regulondb* object:
+First we need to connect with the database and create a *regulondb* object:
 
 
 
@@ -584,7 +585,7 @@ convert_to_granges(res)
 
 ---
 Integrating your package results with the Bioconductor Ecosystem facilitates
-the use of other packages in downstream steps, for example for plotting.
+the use of other packages in downstream steps (e.g. plotting).
 
 
 ```r
@@ -606,7 +607,7 @@ class: center
 
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
-# How do we get help?
+# Where can we find some help?
 
 --
 ## browseVignettes() is a good start
@@ -618,7 +619,7 @@ browseVignettes("Biostrings")
 # But...
 
 ---
-# The Bioconductor community is and infinite source of knowledge
+# The Bioconductor community is an infinite source of knowledge
 
 .pull-left[
 ### Support page of Bioconductor
